# destep

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
scripts/: batch_visualize.py
specs/001-destep-rewrite/: plan.md  spec.md  tasks.md
specs/001-destep-rewrite/checklists/: requirements.md
specs/001-idf-conversion-completion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-idf-conversion-completion/checklists/: requirements.md
src/: config.py
src/codegen/: __init__.py  field_parser.py  idf_model.py.jinja2  model_generator.py  schema_parser.py  template_filters.py
src/codegen/templates/: idf_model_py.jinja2
src/converters/: __init__.py  _share.py  base.py  building.py  construction.py  fenestration.py  hvac.py  hvac_strategy.py  internal_gains.py  manager.py  schedule.py  sizing.py  surface.py  zone.py
src/database/: __init__.py  accdb_reader.py  extractor.py  schema_checker.py  sqlite_manager.py
src/database/models/: __init__.py  _base.py  building.py  construction.py  energy.py  environment.py  fenestration.py  gains.py  geometry.py  hvac.py  misc.py  pipenet.py  schedule.py
src/idf/: __init__.py  idf.py
src/idf/models/: __init__.py  _base.py  _refs.py  advanced_construction.py  air_distribution.py  availability_managers.py  coils.py  condensers.py  constructions.py  curves.py  daylighting.py  demand_limiting.py  economics.py  electric_load.py  ems.py  evap_coolers.py  external_interface.py  fans.py  faults.py  (+29 more)
src/utils/: __init__.py  ddy_downloader.py  log.py  pinyin.py
src/visualization/: __init__.py  idf_render.py
