[project]
name = "destep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jaydebeapi>=1.2.3",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "jpype1>=1.6.0",
    "loguru>=0.7.3",
    "mapbox-earcut>=2.0.0",
    "pydantic>=2.12.5",
    "pypinyin>=0.55.0",
    "scalene>=2.0.1",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.45",
    "timezonefinder>=8.2.1",
    "trimesh>=4.11.0",
    "typer>=0.21.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "N",
]

ignore = [
    "E501", # Line too long
    "N805"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
